feat: add auth to download archive
