# docs/swagger.json
@@ -75,11 +75,6 @@
         },
         "/manager/v1/download": {
             "get": {
-                "security": [
-                    {
-                        "BearerAuth": []
-                    }
-                ],
                 "description": "Realiza o download de um arquivo salvo, baseado no path informado",
                 "produces": [
                     "application/octet-stream"
